k8s/network/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: configmap-test-app-service
spec:
  selector:
    app: configmap-test-app
  ports:
    - port: 8080
      targetPort: 8080
      name: http
  type: NodePort
